--- a/src/components/mainCity/mainCity.module.css
+++ b/src/components/mainCity/mainCity.module.css
@@ -1,5 +1,6 @@
 .mainCity_container {
 	width: 100%;
+	padding: 1rem 2rem;
 }
 .mainCity_title {
 	font-size: 1.6rem;
